--- a/.jira/config.yml
+++ b/.jira/config.yml
@@ -1,5 +1,7 @@
 name: Deployment Action
 uses: chrnorm/deployment-action@v2.0.5
+permissions:
+      deployments: write
 deployments:
   environmentMapping:
     development:
