--- a/.github/workflows/test_deploy2.yml
+++ b/.github/workflows/test_deploy2.yml
@@ -32,4 +32,4 @@ jobs:
         with:
           token: '${{ github.token }}'
           environment-url: http://my-app-url.com
-          environment: Pre-Prod
+          environment: development
