TEST-13 #comment testing

--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -31,5 +31,5 @@ jobs:
         with:
           token: '${{ github.token }}'
           environment-url: 
-          environment: production
+          environment: support-trunk
         # more steps below where you run your deployment scripts inside the same action
